# comp_web

./: CMakeLists.txt  GUI.cpp  algoritmo.cpp  algoritmo.h  chainmap.cpp  chainmap.h  datos.txt  datos100.txt  datoschain.txt  datosj.json  graficador.cpp  graficador.h  graficos.cpp  graficos.h  io.cpp  io.h  kmeans.cpp  kmeans.h  main.cpp  maxmin.cpp  maxmin.h
.github/workflows/: windows.yaml
